# openmp-inverse

./: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cmake_install.cmake  inverseMatrixOpenMP  output.txt
include/: lu.h  matrix.h
src/: lu.c  main.c  matrix.c
ver1/: matrix.c
ver2/: a.out  mainsecond.cpp
